--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
         <section class="flex">
 
-            <a href="home.html" class="logo">Travia.</a>
+            <a href="index.html" class="logo">Travia.</a>
 
             <nav class="navbar">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="Tours.html">Tours</a>
-                <a href="Destinations.html">Destinations</a>
-                <a href="Contact.html">Contact</a>
+                <a href="tours.html">Tours</a>
+                <a href="destinations.html">Destinations</a>
+                <a href="contact.html">Contact</a>
             </nav>
 
             <div id="menu-btn" class="fas fa-bars"></div>
